# GregTech6-Translation-Groupware

./: .gitignore  Cargo.toml
src/: config.rs  generator.rs  lang.rs  main.rs  meta.rs  replacer.rs  rule.rs
workplace/: config.yml
