[package]
name = "gregtech6_translation_groupware"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = { version = "3.0", features = ["derive"] }
either = { version = "1.6.1", features = ["serde"] }
strfmt = "0.1.6"
dyn-clone = "1.0"